force-app/main/default/objects/Email_Template_Mapping__c/Email_Template_Mapping__c.object-meta.xml
<CustomObject>
    <label>Email Template Mapping</label>
    <nameField>
        <displayFormat>ET-{0000}</displayFormat>
        <label>Email Template Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Template Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>