force-app/main/default/objects/Email_Template_Mapping__c/fields/Activation_Order__c.field-meta.xml
<CustomField>
    <fullName>Activation_Order__c</fullName>
    <label>Activation Order</label>
    <length>100</length>
    <type>Text</type>
</CustomField>