force-app/main/default/objects/Email_Template_Mapping__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Email Template Mappings</relationshipLabel>
    <relationshipName>Email_Template_Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>