force-app/main/default/objects/Email_Template_Mapping__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Email Template</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The email template that is selected must be in activated condition</errorMessage>
        <filterItems>
            <field>Email_Template__c.Activated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Email_Template__c</referenceTo>
    <relationshipLabel>Email Template Mappings</relationshipLabel>
    <relationshipName>Email_Template_Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>