force-app/main/default/objects/Email_Template_Mapping__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Activated</fullName>
                <default>true</default>
                <label>Not Activated</label>
            </value>
            <value>
                <fullName>Activate</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>End</fullName>
                <isActive>false</isActive>
                <label>End</label>
            </value>
            <value>
                <fullName>Start</fullName>
                <isActive>false</isActive>
                <label>Start</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>