force-app/main/default/objects/Email_Template_Mapping__c/fields/Template_Last_Activated_On__c.field-meta.xml
<CustomField>
    <fullName>Template_Last_Activated_On__c</fullName>
    <label>Template Last Activated On</label>
    <type>DateTime</type>
</CustomField>