force-app/main/default/objects/Email_Template_Mapping__c/validationRules/Cannot_change_the_status_to_NA.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_the_status_to_NA</fullName>
    <active>false</active>
    <description>Email template mapping status cannot be changed to not activated if the email template is already activated once</description>
    <errorConditionFormula>NOT(ISNULL(Activation_Order__c)) &amp;&amp; TEXT(Status__c) = &apos;Not Activated&apos;</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Email Template Mapping cannot be changed to &apos;Not Activated&apos; stage if the template is activated at least once</errorMessage>
</ValidationRule>