force-app/main/default/objects/Email_Template_Mapping__c/validationRules/Email_Template_should_be_activated.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Template_should_be_activated</fullName>
    <active>true</active>
    <description>The email template  for the respective template mapping should be activated.</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Activate&quot;) &amp;&amp; NOT(Email_Template__r.Activated__c)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>This email template is not present in the marketing cloud. Please make sure that the email template is present in the marketing cloud.</errorMessage>
</ValidationRule>