force-app/main/default/objects/Email_Template_Mapping__c/validationRules/Template_NE_Activate_on_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Template_NE_Activate_on_Create</fullName>
    <active>true</active>
    <description>Email template cannot be activated on create</description>
    <errorConditionFormula>ISNEW() &amp;&amp; (TEXT(Status__c)  = &apos;Activate&apos; || TEXT(Status__c)  = &apos;Completed&apos;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Email template cannot be &apos;Activated&apos; or &apos;Completed&apos; on creation</errorMessage>
</ValidationRule>