force-app/main/default/objects/Email_Template_Mapping__c/validationRules/Validation_for_EmailTemplate_and_Campaig.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_EmailTemplate_and_Campaig</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISCHANGED( Campaign__c ) , ISCHANGED( Email_Template__c ))</errorConditionFormula>
    <errorMessage>Email Template and Campaign cannot be update</errorMessage>
</ValidationRule>